fix: Update TopBar on mobile screens to adapt to selected theme colors

--- a/src/components/Mobile/styles.css
+++ b/src/components/Mobile/styles.css
@@ -1,7 +1,3 @@
-/* :root {
-  --body-background-color: rgb(0, 0, 0);
-}
- */
 body {
   background-color: var(--body-background-color);
   height: 100svh;
@@ -13,14 +9,10 @@ body {
   padding: 10px;
 }
 
-/* #root {
-  background: black;
-} */
-
 .mobile-dock-container {
   height: 11svh;
   position: absolute;
-  /* margin-bottom: 15px; */
+
   bottom: calc(100svh - (100svh - 6svh));
   width: 100%;
 }
